@@ -7,8 +7,53 @@
 	ellipse="misc/ellipse"
 	profile=portraits/core/Alex_Jarocha-Ernst/elvish-shaman.png
 	{MAGENTA_IS_THE_TEAM_COLOR}
-	image_healing="null"
-	image_halo_healing="units/elves-wood/shaman-heal1.png:65,units/elves-wood/shaman-heal2.png:85,units/elves-wood/shaman-heal3.png:65,units/elves-wood/shaman-heal4.png:65,units/elves-wood/shaman-heal5.png:65,units/elves-wood/shaman-heal6.png:65,units/elves-wood/shaman-heal7.png:65,units/elves-wood/shaman-heal8.png:65,units/elves-wood/shaman-heal9.png:65"
+	[healing_anim]
+		[frame]
+			begin=-290
+			end=-225
+			image="units/elves-wood/shaman-heal1.png"
+		[/frame]
+		[frame]
+			begin=-225
+			end=-160
+			image="units/elves-wood/shaman-heal2.png"
+		[/frame]
+		[frame]
+			begin=-160
+			end=-95
+			image="units/elves-wood/shaman-heal3.png"
+		[/frame]
+		[frame]
+			begin=-95
+			end=-30
+			image="units/elves-wood/shaman-heal4.png"
+		[/frame]
+		[frame]
+			begin=-30
+			end=35
+			image="units/elves-wood/shaman-heal5.png"
+		[/frame]
+		[frame]
+			begin=35
+			end=100
+			image="units/elves-wood/shaman-heal6.png"
+		[/frame]
+		[frame]
+			begin=100
+			end=165
+			image="units/elves-wood/shaman-heal7.png"
+		[/frame]
+		[frame]
+			begin=165
+			end=230
+			image="units/elves-wood/shaman-heal8.png"
+		[/frame]
+		[frame]
+			begin=230
+			end=295
+			image="units/elves-wood/shaman-heal9.png"
+		[/frame]
+	[/healing_anim]
 	hitpoints=26
 	movement_type=woodland
 	movement=5
