@@ -4,6 +4,8 @@ Version 1.1.7+SVN:
      * fixed a few broken image paths
  * language and i18n:
      * updated translations: Czech, Dutch, French, German, Polish, Slovak
+ * Engine changes
+     * added healing anims
 
 Version 1.1.7:
  * campaigns
